LMDB 0.9 Change Log

LMDB 0.9.15 Release Engineering
	Fix txn init (ITS#7961,#7987)
	Fix MDB_PREV_DUP (ITS#7955,#7671)
	Fix compact of empty env (ITS#7956)
	Fix mdb_rebalance collapsing root (ITS#8062)
	Fix mdb_load with large values (ITS#8066)
	Fix to retry writes on EINTR (ITS#8106)
	Fix mdb_cursor_del on empty DB (ITS#8109)
	Added workaround for fdatasync bug in ext3fs
	Build
		Don't use -fPIC for static lib
		Update .gitignore (ITS#7952,#7953)
		Cleanup for "make test" (ITS#7841)
		Misc. Android/Windows cleanup
	Documentation
		Fix MDB_APPEND doc
		Clarify mdb_dbi_open doc

LMDB 0.9.14 Release (2014/09/20)
	Fix to support 64K page size (ITS#7713)
	Fix to persist decreased as well as increased mapsizes (ITS#7789)
	Fix cursor bug when deleting last node of a DUPSORT key
	Fix mdb_env_info to return FIXEDMAP address
	Fix ambiguous error code from writing to closed DBI (ITS#7825)
	Fix mdb_copy copying past end of file (ITS#7886)
	Fix cursor bugs from page_merge/rebalance
	Fix to dirty fewer pages in deletes (mdb_page_loose())
	Fix mdb_dbi_open creating subDBs (ITS#7917)
	Fix mdb_cursor_get(_DUP) with single value (ITS#7913)
	Fix Windows compat issues in mtests (ITS#7879)
	Add compacting variant of mdb_copy
	Add BigEndian integer key compare code
	Add mdb_dump/mdb_load utilities

LMDB 0.9.13 Release (2014/06/18)
	Fix mdb_page_alloc unlimited overflow page search
	Documentation
		Re-fix MDB_CURRENT doc (ITS#7793)
		Fix MDB_GET_MULTIPLE/MDB_NEXT_MULTIPLE doc

LMDB 0.9.12 Release (2014/06/13)
	Fix MDB_GET_BOTH regression (ITS#7875,#7681)
	Fix MDB_MULTIPLE writing multiple keys (ITS#7834)
	Fix mdb_rebalance (ITS#7829)
	Fix mdb_page_split (ITS#7815)
	Fix md_entries count (ITS#7861,#7828,#7793)
	Fix MDB_CURRENT (ITS#7793)
	Fix possible crash on Windows DLL detach
	Misc code cleanup
	Documentation
		mdb_cursor_put: cursor moves on error (ITS#7771)


LMDB 0.9.11 Release (2014/01/15)
	Add mdb_env_set_assert() (ITS#7775)